GS-13618: Secondary nav wrapping issue

--- a/src/webapp/res/css/07_navigation/secondary.css
+++ b/src/webapp/res/css/07_navigation/secondary.css
@@ -57,7 +57,7 @@ General comments:
     display: block;
     outline: 0;
     text-decoration: none;
-    padding: 0 13px;
+    padding-right: 24px;
 }
 
 /*#gs-secondary .menuItem .last {*/
